Fix potentially duplicated local names when using broken debug information